--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,9 +7,8 @@
         <label for="password">Password</label>
         <input type="password" formControlName="password" placeholder="Enter your password" required>
         
-        <ng-container *ngIn="alert$|async as alert">
+        <ng-container *ngIf="alert|async as alert">
             <span [class]="alert.alertClass">{{alert.message}}</span>
-           
         </ng-container>
         
         <input type="submit" value="Login" [disabled]="loginForm.invalid">
