--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,12 @@
-<p>home works!</p>
-ciao 
+<html>
+    <head>
+        <title>Home</title>
+    </head>
+    <body>
+        <h1>Home</h1>
+        <p>home works!</p>
+        <button (click)="logout()">logout</button>
+    </body>
+</html>
+
+
