--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
 <!-- home.component.html -->
 
+ 
 <table class="table table-striped">
   <thead>
-    <tr>
+    <tr><app-menu></app-menu>
       <th>Nome Condominio</th>
       <th>Indirizzo</th>
       <th>Numero Appartamenti</th>
