--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <!-- home.component.html -->
+<app-menu></app-menu>
 
- 
   <table class="table table-striped">
     <thead>
       <tr><app-menu></app-menu>
@@ -55,4 +55,8 @@
       </div>
     </div>
   </div>
-  
+
+
+
+
+      
