--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,14 @@
 <!-- home.component.html -->
-<app-menu></app-menu>
+<div class="row" style="--bs-gutter-x: 0rem;">
+  <div class="col-2 p-0">
+    <app-navbar></app-navbar>
+  </div>
+  <div class="col-10 p-0">
+    
 
   <table class="table table-striped">
     <thead>
-      <tr><app-menu></app-menu>
+      <tr><!--<app-menu></app-menu> -->
         <th>Nome Condominio</th>
         <th>Indirizzo</th>
         <th>Numero Appartamenti</th>
@@ -20,6 +25,7 @@
       </tr>
     </tbody>
   </table>
+  <button (click)="logout()" class="btn btn-primary">Logout</button>
   <button class="btn btn-primary" (click)="openModal()">Aggiungi Condominio</button>
   
   <!-- Modal per l'aggiunta di un condominio -->
@@ -60,3 +66,5 @@
 
 
       
+  </div>
+</div>
