--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,22 +38,21 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-group">
-              <label for="nome">Nome:</label>
-              <input type="text" class="form-control" id="nome" [(ngModel)]="nuovoCondominio.Nome">
-            </div>
-            <div class="form-group">
-              <label for="indirizzo">Indirizzo:</label>
-              <input type="text" class="form-control" id="indirizzo" [(ngModel)]="nuovoCondominio.Indirizzo">
-            </div>
-            <div class="form-group">
-              <label for="nAppartamenti">Numero Appartamenti:</label>
-              <input type="number" class="form-control" id="nAppartamenti" [(ngModel)]="nuovoCondominio.nAppartamenti">
-            </div>
-          </form>
-        </div>
+        <form>
+          <div class="form-group">
+            <label for="nome">Nome:</label>
+            <input type="text" class="form-control" id="nome" name="nome" [(ngModel)]="nuovoCondominio.Nome">
+          </div>
+          <div class="form-group">
+            <label for="indirizzo">Indirizzo:</label>
+            <input type="text" class="form-control" id="indirizzo" name="indirizzo" [(ngModel)]="nuovoCondominio.Indirizzo">
+          </div>
+          <div class="form-group">
+            <label for="nAppartamenti">Numero Appartamenti:</label>
+            <input type="number" class="form-control" id="nAppartamenti" name="nAppartamenti" [(ngModel)]="nuovoCondominio.nAppartamenti">
+          </div>
+        </form>
+        
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" (click)="aggiungiCondominio()">Salva</button>
           <button type="button" class="btn btn-secondary" (click)="closeModal()">Annulla</button>
