--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,17 +1,40 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark custom-toolbar">
   <a routerLink="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-    <svg class="bi pe-none me-2" width="40" height="32"></svg>
+   
+     <img src="../../assets/logo.jpg"  width="40" height="40" class="me-2">
     <span class="fs-4">CondoMaster</span>
   </a>
   <hr>
   <ul class="nav nav-pills flex-column mb-auto">
-  
+    <li class="nav-item">
+      <a routerLink="/home" class="nav-link text-white d-flex align-items-center" aria-current="page">
+        <svg class="bi me-2" width="16" height="16" fill="currentColor"></svg>
+        <span class="material-symbols-outlined me-2">home</span> <!-- Aggiunto margine destro -->
+        Home
+      </a>
+    </li>
+    <li>
+      <a routerLink="/appartamenti" class="nav-link text-white d-flex align-items-center">
+        <svg class="bi me-2" width="16" height="16" fill="currentColor"></svg>
+        <span class="material-symbols-outlined me-2">apartment</span> <!-- Aggiunto margine destro -->
+        Appartamenti
+      </a>
+    </li>
+    <li>
+      <a routerLink="/spese" class="nav-link text-white d-flex align-items-center">
+        <svg class="bi me-2" width="16" height="16" fill="currentColor"></svg>
+        <span class="material-symbols-outlined me-2">payments</span> <!-- Aggiunto margine destro -->
+        Spese
+      </a>
+    </li>
   </ul>
+  
+  <!-- Bottone di logout -->
+  <div class="mt-auto"> <!-- Utilizzo della classe mt-auto per spostare il bottone in fondo -->
+    <button (click)="goToLogin()"  class="btn btn-primary">Logout</button>
   </div>
-
-
-
+</div>
