--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -47,4 +47,7 @@ table {
   .btn:hover {
     opacity: 0.8; /* leggermente trasparente quando il mouse ci passa sopra */
   }
+  .table td {
+    text-align: center;
+  }
   
