--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
       <a routerLink="/appartamenti" class="nav-link text-white d-flex align-items-center">
         <svg class="bi me-2" width="16" height="16" fill="currentColor"></svg>
         <span class="material-symbols-outlined me-2">apartment</span> <!-- Aggiunto margine destro -->
-        Appartamenti
+        Condomini
       </a>
     </li>
     <li>
