--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
     </tbody>
   </table>
   
-  <button class="btn btn-primary" (click)="openModal()">Aggiungi Condominio</button>
+  <button class="btn btn-primary" id="Agg" (click)="openModal()">Aggiungi Condominio</button>
   
   <!-- Modal per l'aggiunta di un condominio -->
   <div class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': showModal}" style="display: block;" *ngIf="showModal">
