--- a/src/app/entry/entry.component.html
+++ b/src/app/entry/entry.component.html
@@ -7,13 +7,12 @@
 
 
   <div class="col-10 welcome-page">
-    <video autoplay muted loop id="background-video">
-        <source src="../../assets/9150545-hd_1920_1080_24fps.mp4" type="video/mp4">
-       
-      </video>
+  
         <div class="content">
             <div class="welcome-message">
-                <p>Benvenuto</p>
+                <h1 style="color: black;">Benvenuto Su CondoMaster</h1>
+                <img src="../../assets/logo.jpg"  width="300" height="300" class="me-2"><br><br>
+
                 <button (click)="route()">Visualizza Condomini</button>
               </div>
 
