--- a/src/app/entry/entry.component.html
+++ b/src/app/entry/entry.component.html
@@ -10,7 +10,7 @@
   
         <div class="content">
             <div class="welcome-message">
-                <h1 style="color: black;">Benvenuto Su CondoMaster</h1>
+                <h1 style="color: black;">Benvenuto Su CondoMaster {{adminNome}}</h1>
                 <img src="../../assets/logo.jpg"  width="300" height="300" class="me-2"><br><br>
 
                 <button (click)="route()">Visualizza Condomini</button>
