--- a/src/app/entry/entry.component.html
+++ b/src/app/entry/entry.component.html
@@ -7,16 +7,20 @@
 
 
   <div class="col-10 welcome-page">
-  
+    <img src="../../assets/grattacielo-Photoroom.png-Photoroom.png" class="left-logo" alt="Logo condominio">
         <div class="content">
             <div class="welcome-message">
-                <h1 style="color: black;">Benvenuto Su CondoMaster {{adminNome}}</h1>
-                <img src="../../assets/logo.jpg"  width="300" height="300" class="me-2"><br><br>
+              <div class="background">
+                <h1 style="color: black; font-size: 25px" >Benvenuto Su CondoMaster {{adminNome}}</h1>
+              </div>
+                
+                <img src="../../assets/logo.jpg" class="me-2" class="logo"><br><br>
 
-                <button (click)="route()">Visualizza Condomini</button>
+                <button (click)="route()">Visualizza Condomini </button>
               </div>
 
         </div>
+        <img src="../../assets/apart.png" class="right-logo" alt="Logo destra"> <!-- Aggiungi l'immagine destra qui -->
        
 
 </div> 
