--- a/src/app/entry/entry.component.scss
+++ b/src/app/entry/entry.component.scss
@@ -2,23 +2,52 @@
     padding: 20px;
     text-align: center;
     position: relative;
+    display: flex;
+    align-items: center;
+   
+    background: linear-gradient(135deg, #f5f5dc, #faf0e6, #faecd9);
  
   }
 
-  #background-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%; /* Imposta la larghezza al 100% per adattarsi al contenitore */
-    height: 100%; /* Imposta l'altezza al 100% per adattarsi al contenitore */
-    object-fit: cover; /* Imposta l'immagine di sfondo per coprire l'intero contenitore */
-    z-index: -1;
-  }
+  .left-logo {
+    width: 400px; /* Dimensioni più grandi per l'immagine */
+    height: auto;
+    margin-right: 20px; /* Aggiungi spazio tra l'immagine e il contenuto principale */
+}
+
+
+
+  .logo {
+    width: 250px;
+    height:250px;
+    border-radius: 50%; /* Applica il bordo arrotondato per ottenere la forma circolare */
+    margin-top: 110px;
+    border:2px solid black;
+}
 
   .content {
-    position: relative;
+    position: absolute;
     z-index: 1;
     color: #fff; /* Testo bianco per contrastare con il video di sfondo */
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    flex-grow: 1;
+
+  }
+
+  .right-logo {
+    width: 300px;
+    height: auto;
+    margin-left: 450px; /* Aggiungi spazio tra il logo principale e l'immagine a destra */
+}
+
+  .background{
+   
+    border-radius: 50px;
+    padding: 15px;
+    
+    
   }
   
   
@@ -38,14 +67,19 @@
   
   .welcome-message button {
     padding: 10px 20px;
+    margin-top: 30px;
+    width: 200px;
+    height: 50px;
     font-size: 16px;
-    background-color: #007bff;
-    color: #fff;
+    background-color: white;
+    color: black;
     border: none;
     border-radius: 5px;
     cursor: pointer;
   }
   
   .welcome-message button:hover {
-    background-color: #0056b3;
+    background-color: black;
+    color: white;
   }
+  
