--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,6 +31,11 @@
         Spese
       </a>
     </li>
+    <a  (click)="gotofeedback()" class="nav-link text-white d-flex align-items-center">
+      <svg class="bi me-2" width="16" height="16" fill="currentColor"></svg>
+      <span class="material-symbols-outlined me-2">person</span> <!-- Aggiunto margine destro -->
+      Feedback
+    </a>
   </ul>
   
   <!-- Bottone di logout -->
