--- a/src/app/spese/spese.component.html
+++ b/src/app/spese/spese.component.html
@@ -1,1 +1,51 @@
-
+<div class="row" style="--bs-gutter-x: 0rem;">
+    <div class="col-2 p-0">
+      <app-navbar></app-navbar>
+    </div>
+    <div class="col-10 p-0">
+      <div class="dashboard-container">
+        <div class="row">
+          <!-- Primo grafico nella parte superiore -->
+          <div class="col-md-6">
+            <div class="chart-container">
+              <canvas id="lineChart" width="400" height="200"></canvas>
+            </div>
+          </div>
+          <!-- Secondo grafico nella parte superiore -->
+          <div class="col-md-6">
+            <div class="chart-container">
+              <canvas id="barChart" width="400" height="200"></canvas>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Cognome</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Ruolo</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Mario</td>
+                    <td>Rossi</td>
+                    <td>mario.rossiexample.com</td>
+                    <td>Admin</td>
+                  </tr>
+                  <!-- Aggiungi altri utenti qui -->
+                </tbody>
+              </table>
+      </div>
+      <!-- Bottone per aggiungere spese -->
+      <div class="text-end fixed-bottom mb-5 me-3">
+        <button type="button" class="btn btn-success btn-lg">
+            <span class="material-symbols-outlined align-middle me-2">payments</span>
+            <span class="align-middle">Aggiungi spese</span>
+        </button>
+      </div>
+    </div>
+  </div>
