--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,1 +1,31 @@
-<p>feedback works!</p>
+<div class="row" style="--bs-gutter-x: 0rem;">
+    <div class="col-2 p-0">
+      <app-navbar></app-navbar>
+    </div>
+    <div class="col-10 p-0">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>Feedback</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <form >
+              <div class="mb-3">
+                <label for="name" class="form-label">Name</label>
+                <input type="text" class="form-control" id="name" formControlName="name">
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" formControlName="email">
+              </div>
+              <div class="mb-3">
+                <label for="message" class="form-label">Message</label>
+                <textarea class="form-control" id="message" formControlName="message"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
