--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,17 +1,19 @@
-<div class="row" style="--bs-gutter-x: 0rem;">
+
+<div class="gradient-background">
+  <div class="row" style="--bs-gutter-x: 0rem;">
     <div class="col-2 p-0">
       <app-navbar></app-navbar>
     </div>
     <div class="col-10 p-0">
-      <div class="container">
+      <div class="container py-5">
         <div class="row">
-          <div class="col-12">
-            <h1>Feedback</h1>
+          <div class="col-12 text-center">
+            <h1 class="mb-4"><i>Parla con l'Amministratore</i></h1>
           </div>
         </div>
         <div class="row">
-          <div class="col-12">
-            <form >
+          <div class="col-lg-6 offset-lg-3">
+            <form>
               <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
                 <input type="text" class="form-control" id="name" formControlName="name">
@@ -22,10 +24,16 @@
               </div>
               <div class="mb-3">
                 <label for="message" class="form-label">Message</label>
-                <textarea class="form-control" id="message" formControlName="message"></textarea>
+                <textarea class="form-control" id="message" rows="6" formControlName="message"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <div class="d-grid">
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
             </form>
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  
+</div>
