--- a/src/app/entry/entry.component.scss
+++ b/src/app/entry/entry.component.scss
@@ -13,6 +13,7 @@
     width: 400px; /* Dimensioni più grandi per l'immagine */
     height: auto;
     margin-right: 20px; /* Aggiungi spazio tra l'immagine e il contenuto principale */
+    margin-left: 10%;
 }
 
 
@@ -39,7 +40,7 @@
   .right-logo {
     width: 300px;
     height: auto;
-    margin-left: 450px; /* Aggiungi spazio tra il logo principale e l'immagine a destra */
+    margin-left: 30%; /* Aggiungi spazio tra il logo principale e l'immagine a destra */
 }
 
   .background{
