--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,22 +2,33 @@
     <div class="container">
         <h2><b>Login CondoMaster</b></h2>
         <ng-container *ngIf="!isLoginForm">
-            <input type="email" class="email" formControlName="email" placeholder="EMAIL" required><br>
-        </ng-container>
-        <form [formGroup]="isLoginForm ? loginForm : registerForm" (ngSubmit)="isLoginForm ? login() : register()">
-            <input type="text" class="email" formControlName="username" placeholder="USERNAME" required><br>
-            <input type="password" class="pwd" formControlName="password" placeholder="PASSWORD" required><br>
-            <ng-container *ngIf="!isLoginForm">
+            <form [formGroup]="registerForm" (ngSubmit)="register()">
+                <input type="email" class="email" formControlName="email" placeholder="EMAIL" required><br>
+                <input type="text" class="email" formControlName="username" placeholder="USERNAME" required><br>
+                <input type="password" class="pwd" formControlName="password" placeholder="PASSWORD" required><br>
                 <input type="password" class="pwd" formControlName="confirmPassword" placeholder="CONFIRM PASSWORD" required><br>
-            </ng-container>
-            <ng-container *ngIf="alert|async as alert">
-                <span [class]="alert.alertClass">{{alert.message}}</span>
-            </ng-container>
-            <div style="display: flex; justify-content: space-between;">
-                <input class="sig" type="submit" value="{{ isLoginForm ? 'Login' : 'Registrati' }}" [disabled]="isLoginForm ? loginForm.invalid : registerForm.invalid">
-                <input class="sig" type="button" (click)="toggleForm()" value="{{ isLoginForm ? 'Registrati' : 'Login' }}">
-            </div>
-        </form>
+                <ng-container *ngIf="alert|async as alert">
+                    <span [class]="alert.alertClass">{{alert.message}}</span>
+                </ng-container>
+                <div style="display: flex; justify-content: space-between;">
+                    <input class="sig" type="submit" value="Registrati" [disabled]="registerForm.invalid">
+                    <input class="sig" type="button" (click)="toggleForm()" value="Login">
+                </div>
+            </form>
+        </ng-container>
+        <ng-container *ngIf="isLoginForm">
+            <form [formGroup]="loginForm" (ngSubmit)="login()">
+                <input type="text" class="email" formControlName="username" placeholder="USERNAME" required><br>
+                <input type="password" class="pwd" formControlName="password" placeholder="PASSWORD" required><br>
+                <ng-container *ngIf="alert|async as alert">
+                    <span [class]="alert.alertClass">{{alert.message}}</span>
+                </ng-container>
+                <div style="display: flex; justify-content: space-between;">
+                    <input class="sig" type="submit" value="Login" [disabled]="loginForm.invalid">
+                    <input class="sig" type="button" (click)="toggleForm()" value="Registrati">
+                </div>
+            </form>
+        </ng-container>
         <img src="../../assets/logo.jpg" class="logo">
     </div>
 </div>
