--- a/src/app/index-utente/index-utente.component.html
+++ b/src/app/index-utente/index-utente.component.html
@@ -1,8 +1,9 @@
 <div class="row" style="--bs-gutter-x: 0rem;">
     <div class="col-2 p-0">
-      <app-navbar></app-navbar>
+      <app-navbar-utente></app-navbar-utente>
+
     </div>
     <div class="col-10 p-0">      
-        
+        utente
     </div>
 </div>
