--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -2,7 +2,7 @@
 <div class="gradient-background">
   <div class="row" style="--bs-gutter-x: 0rem;">
     <div class="col-2 p-0">
-      <app-navbar></app-navbar>
+      <app-navbar-utente></app-navbar-utente>
     </div>
     <div class="col-10 p-0">
       <div class="container py-5">
