--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,12 +14,17 @@
                     <input class="sig" type="submit" value="Registrati" [disabled]="registerForm.invalid" (click)="expandRegisterContainer()">
                     <input class="sig" type="button" (click)="toggleForm()" value="Login">
                 </div>
+                
             </form>
         </ng-container>
         <ng-container *ngIf="isLoginForm">
             <form [formGroup]="loginForm" (ngSubmit)="login()">
                 <input type="text" class="email" formControlName="username" placeholder="USERNAME" required><br>
                 <input type="password" class="pwd" formControlName="password" placeholder="PASSWORD" required><br>
+                <div style="padding-left: 30px;">
+                    <a href="#" style="text-decoration: none; color: black;">Hai dimenticato la password?</a>
+                </div>
+                <br>
                 <ng-container *ngIf="alert|async as alert">
                     <span [class]="alert.alertClass">{{alert.message}}</span>
                 </ng-container>
@@ -27,6 +32,7 @@
                     <input class="sig" type="submit" value="Login" [disabled]="loginForm.invalid">
                     <input class="sig" type="button" (click)="toggleForm()" value="Registrati">
                 </div>
+                
             </form>
         </ng-container>
         <img src="../../assets/logo.jpg" class="logo">
