--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,41 +1,57 @@
 <div id="colors">
     <div class="container" id="registerContainer">
         <h2><b>Login CondoMaster</b></h2>
-        <ng-container *ngIf="!isLoginForm">
+
+        <!-- Schermata di Registrazione -->
+        <ng-container *ngIf="!isLoginForm && !isForgotPassword">
             <form [formGroup]="registerForm" (ngSubmit)="register()">
                 <input type="email" class="email" formControlName="email" placeholder="EMAIL" required><br>
                 <input type="text" class="email" formControlName="username" placeholder="USERNAME" required><br>
                 <input type="password" class="pwd" formControlName="password" placeholder="PASSWORD" required><br>
                 <input type="password" class="pwd" formControlName="confirmPassword" placeholder="CONFIRM PASSWORD" required><br>
-                <ng-container *ngIf="alert|async as alert">
-                    <span [class]="alert.alertClass">{{alert.message}}</span>
+                <ng-container *ngIf="alert | async as alert">
+                    <span [class]="alert.alertClass">{{ alert.message }}</span>
                 </ng-container>
                 <div style="display: flex; justify-content: space-between;">
-                    <input class="sig" type="submit" value="Registrati" [disabled]="registerForm.invalid" (click)="expandRegisterContainer()">
+                    <input class="sig" type="submit" value="Registrati" [disabled]="registerForm.invalid">
                     <input class="sig" type="button" (click)="toggleForm()" value="Login">
                 </div>
-                
             </form>
         </ng-container>
-        <ng-container *ngIf="isLoginForm">
+
+        <!-- Schermata di Login -->
+        <ng-container *ngIf="isLoginForm && !isForgotPassword">
             <form [formGroup]="loginForm" (ngSubmit)="login()">
                 <input type="text" class="email" formControlName="username" placeholder="USERNAME" required><br>
                 <input type="password" class="pwd" formControlName="password" placeholder="PASSWORD" required><br>
                 <div style="padding-left: 30px;">
-                    <a href="#" style="text-decoration: none; color: black;">Hai dimenticato la password?</a>
+                    <a (click)="forgotPassword()" style="text-decoration: none; color: black;">Hai dimenticato la password?</a>
                 </div>
                 <br>
-                <ng-container *ngIf="alert|async as alert">
-                    <span [class]="alert.alertClass">{{alert.message}}</span>
+                <ng-container *ngIf="alert | async as alert">
+                    <span [class]="alert.alertClass">{{ alert.message }}</span>
                 </ng-container>
                 <div style="display: flex; justify-content: space-between;">
                     <input class="sig" type="submit" value="Login" [disabled]="loginForm.invalid">
                     <input class="sig" type="button" (click)="toggleForm()" value="Registrati">
                 </div>
-                
             </form>
         </ng-container>
+
+        <!-- Schermata di Recupero Password -->
+        <ng-container *ngIf="isForgotPassword">
+            <form [formGroup]="forgotPasswordForm" (ngSubmit)="sendResetPassword()">
+                <input type="email" class="email" formControlName="email" placeholder="Inserisci la tua email" required><br>
+                <ng-container *ngIf="alert | async as alert">
+                    <span [class]="alert.alertClass">{{ alert.message }}</span>
+                </ng-container>
+                <div style="display: flex; justify-content: space-between;">
+                    <input class="sig" type="submit" value="Invia" [disabled]="forgotPasswordForm.invalid">
+                    <input class="sig" type="button" (click)="cancelForgotPassword()" value="Annulla">
+                </div>
+            </form>
+        </ng-container>
+
         <img src="../../assets/logo.jpg" class="logo">
     </div>
 </div>
-<!--PUSH DIO CNAE -->
