--- a/src/app/spese/spese.component.html
+++ b/src/app/spese/spese.component.html
@@ -18,34 +18,44 @@
           </div>
         </div>
       </div>
+      <!-- Aggiungi il nuovo grafico a torta 
       <div class="row mt-3">
-          <div class="col">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Nome</th>
-                  <th scope="col">Cognome</th>
-                  <th scope="col">Email</th>
-                  <th scope="col">Ruolo</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Mario</td>
-                  <td>Rossi</td>
-                  <td>mario.rossiexample.com</td>
-                  <td>Admin</td>
-                </tr>
-                <!-- Aggiungi altri utenti qui -->
-              </tbody>
-            </table>
-    </div>
-    <!-- Bottone per aggiungere spese -->
-    <div class="text-end fixed-bottom mb-5 me-3">
-      <button type="button" class="btn btn-success btn-lg">
+        <div class="col">
+          <div class="chart-container">
+            <canvas id="pieChart" width="400" height="200"></canvas>
+          </div>
+        </div>
+      </div> -->
+      <!-- Tabella e bottone per aggiungere spese -->
+      <div class="row mt-3">
+        <div class="col">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Nome</th>
+                <th scope="col">Cognome</th>
+                <th scope="col">Email</th>
+                <th scope="col">Ruolo</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Mario</td>
+                <td>Rossi</td>
+                <td>mario.rossi.com</td>
+                <td>Admin</td>
+              </tr>
+              <!-- Altri utenti -->
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="text-end fixed-bottom mb-5 me-3">
+        <button type="button" class="btn btn-success btn-lg">
           <span class="material-symbols-outlined align-middle me-2">payments</span>
           <span class="align-middle">Aggiungi spese</span>
-      </button>
+        </button>
+      </div>
     </div>
   </div>
 </div>
