--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,4 +1,3 @@
-
 <div class="gradient-background">
   <div class="row" style="--bs-gutter-x: 0rem;">
     <div class="col-2 p-0">
@@ -13,13 +12,13 @@
         </div>
         <div class="row">
           <div class="col-lg-6 offset-lg-3">
-            <form>
+            <!-- Collega il FormGroup -->
+            <form [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
               <div class="mb-3">
                 <label for="name" class="form-label">Nome</label>
                 <input type="text" class="form-control" id="name" formControlName="nomeUtente">
               </div>
               
-              <!-- Modifica da input type="email" a type="date" -->
               <div class="mb-3">
                 <label for="data" class="form-label">Data</label>
                 <input type="date" class="form-control" id="data" formControlName="data">
@@ -31,14 +30,12 @@
               </div>
               
               <div class="d-grid">
-                <button type="submit" class="btn btn-primary" (click)="onSubmit()">Invia</button>
+                <button type="submit" class="btn btn-primary">Invia</button>
               </div>
             </form>
           </div>
         </div>
-                    
-          </div>
-        </div>
       </div>
     </div>
-
+  </div>
+</div>
