--- a/src/app/navbar-utente/navbar-utente.component.html
+++ b/src/app/navbar-utente/navbar-utente.component.html
@@ -6,7 +6,7 @@
   <a routerLink="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
    
      <img src="../../assets/logo.jpg"  width="40" height="40" class="me-2">
-    <span class="fs-4">CondoMaster Utente</span>
+    <span class="fs-4">CondoMaster</span>
   </a>
   <hr>
   <ul class="nav nav-pills flex-column mb-auto">
