--- a/src/app/index-utente/index-utente.component.html
+++ b/src/app/index-utente/index-utente.component.html
@@ -41,6 +41,26 @@
                                       <td>$50</td>
                                       <td>Da pagare</td>
                                   </tr>
+                                  <tr>
+                                    <td>2024-05-15</td>
+                                    <td>Elettricità</td>
+                                    <td>$80</td>
+                                    <td>Da pagare</td>
+                                </tr>
+                                <tr>
+                                    <td>2024-05-20</td>
+                                    <td>Gas</td>
+                                    <td>$70</td>
+                                    <td>Pagato</td>
+                                </tr>
+                                <tr>
+                                    <td>2024-05-25</td>
+                                    <td>Internet</td>
+                                    <td>$60</td>
+                                    <td>Da pagare</td>
+                                </tr>
+                                
+                                  
                                   <!-- Aggiungi altre righe per altre spese -->
                               </tbody>
                           </table>
@@ -54,3 +74,4 @@
             </div>
         </div>
     </div>
+  
