--- a/src/app/index-utente/index-utente.component.scss
+++ b/src/app/index-utente/index-utente.component.scss
@@ -15,10 +15,10 @@
 
 .content-overlay {
     position: absolute;
-    top: -30vh;
-    left: 20vw; /* Lascia il 10% dello spazio a sinistra */
     width: 50%; /* Lascia il 50% dello spazio per il contenuto */
     height: 100%;
+    left: 25vh;
+    top: -20vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
