--- a/src/app/index-utente/index-utente.component.html
+++ b/src/app/index-utente/index-utente.component.html
@@ -1,77 +1,44 @@
-  <div class="row" style="--bs-gutter-x: 0rem;">
+<!-- index-utente.component.html -->
+<div class="row" style="--bs-gutter-x: 0rem;">
     <div class="col-2 p-0">
-        <app-navbar-utente></app-navbar-utente>
+      <app-navbar-utente></app-navbar-utente>
     </div>
     <div class="col-10 p-0">
-        <div class="video-container">
-            <video autoplay muted loop class="video-background">
-                <source src="../../assets/4665104-uhd_3840_2160_30fps.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <div class="content-overlay">
-                <div class="container-fluid">
-                    <div class="row justify-content-end">
-                        <div class="col-md-10">
-                            <h1 class="text-white text-end">Benvenuto, Utente!</h1>
-                            <table class="table text-white">
-                              <thead>
-                                  <tr>
-                                      <th scope="col">Data</th>
-                                      <th scope="col">Descrizione</th>
-                                      <th scope="col">Importo</th>
-                                      <th scope="col">Stato</th>
-                                  </tr>
-                              </thead>
-                              <tbody>
-                                  <tr>
-                                      <td>2024-05-01</td>
-                                      <td>Affitto</td>
-                                      <td>$1000</td>
-                                      <td>Da pagare</td>
-                                  </tr>
-                                  <tr>
-                                      <td>2024-05-05</td>
-                                      <td>Spese condominiali</td>
-                                      <td>$150</td>
-                                      <td>Pagato</td>
-                                  </tr>
-                                  <tr>
-                                      <td>2024-05-10</td>
-                                      <td>Acqua</td>
-                                      <td>$50</td>
-                                      <td>Da pagare</td>
-                                  </tr>
-                                  <tr>
-                                    <td>2024-05-15</td>
-                                    <td>Elettricità</td>
-                                    <td>$80</td>
-                                    <td>Da pagare</td>
-                                </tr>
-                                <tr>
-                                    <td>2024-05-20</td>
-                                    <td>Gas</td>
-                                    <td>$70</td>
-                                    <td>Pagato</td>
-                                </tr>
-                                <tr>
-                                    <td>2024-05-25</td>
-                                    <td>Internet</td>
-                                    <td>$60</td>
-                                    <td>Da pagare</td>
-                                </tr>
-                                
-                                  
-                                  <!-- Aggiungi altre righe per altre spese -->
-                              </tbody>
-                          </table>
-                            
-                        </div>
-                       
-                    </div>
-
-                    </div>
-                </div>
+      <div class="video-container">
+        <video autoplay muted loop class="video-background">
+          <source src="../../assets/4665104-uhd_3840_2160_30fps.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <div class="content-overlay">
+          <div class="container-fluid">
+            <div class="row justify-content-end">
+              <div class="col-md-10">
+                <h1 class="text-white text-end">Benvenuto, Utente!</h1>
+                <table class="table text-white">
+                  <thead>
+                    <tr>
+                      <th scope="col">Data</th>
+                      <th scope="col">Descrizione</th>
+                      <th scope="col">Importo</th>
+                      <th scope="col">Stato</th>
+                      <th scope="col">Tipo</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let spesa of spese">
+                      <td>{{ spesa.data }}</td>
+                      <td>{{ spesa.descrizione }}</td>
+                      <td>{{ spesa.importo | currency }}</td>
+                      <td>{{ spesa.saldato ? 'Pagato' : 'Da pagare' }}</td>
+                      <td>{{ spesa.tipo }}</td>
+                      
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-  
+  </div>
