--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -16,12 +16,12 @@
             <form [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
               <div class="mb-3">
                 <label for="name" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="name" formControlName="nomeUtente">
+                <input type="text" class="form-control" id="name" formControlName="NomeUtente">
               </div>
               
               <div class="mb-3">
                 <label for="data" class="form-label">Data</label>
-                <input type="date" class="form-control" id="data" formControlName="data">
+                <input type="date" class="form-control" id="data" formControlName="Data">
               </div>
               
               <div class="mb-3">
